Bug 358200 - tiny size on panel with KF 5.18
Summary: tiny size on panel with KF 5.18
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: notes (other bugs)
Version First Reported In: 5.5.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-19 08:53 UTC by Antonio Rojas
Modified: 2016-01-22 06:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (22.69 KB, image/png)
2016-01-19 08:54 UTC, Antonio Rojas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2016-01-19 08:53:39 UTC
After updating to KF 5.18, the default size (= only available size, since it's not resizable) of the notes applet when placed on the panel is tiny, which makes it practically useless. All is fine with 5.17.

Reproducible: Always
Comment 1 Antonio Rojas 2016-01-19 08:54:18 UTC
Created attachment 96726 [details]
Screenshot
Comment 2 Antonio Rojas 2016-01-20 11:20:11 UTC
Bisected to commit 344dbeb:

AppletQuickItem: Drop timer to create full representation
Comment 4 Antonio Rojas 2016-01-20 11:36:41 UTC
11937533e83659dc4dab6f7e8e6019863a28ddae doesn't fix this one
Comment 5 David Rosca 2016-01-20 14:07:03 UTC
Yes, sorry.

This should fix it https://git.reviewboard.kde.org/r/126822/
Comment 6 David Rosca 2016-01-21 14:41:49 UTC
Git commit f688c904a81c72d077580ab942b874f398fbd7d4 by David Rosca.
Committed on 21/01/2016 at 14:35.
Pushed by drosca into branch 'master'.

AppletQuickItem: Don't try to set initial size bigger than parent size

Trying to set initial size bigger than parent size only results
to item being resized down to fit in parent later.

REVIEW: 126822

M  +8    -4    src/plasmaquick/appletquickitem.cpp

http://commits.kde.org/plasma-framework/f688c904a81c72d077580ab942b874f398fbd7d4