AppletQuickItem: Don't try to set initial size bigger than parent size

Trying to set initial size bigger than parent size only results
to item being resized down to fit in parent later.

REVIEW: 126822
BUG: 358200